# pastime

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fungo/: __init__.py  cli.py  constants.py  exceptions.py  frame.py  http.py  lookup.py
src/fungo/mlb/: __init__.py  discovery.py  games.py  misc.py  people.py  stats.py  stats_api.py  teams.py
src/fungo/statcast/: __init__.py  leaderboards.py  physics.py  search.py
src/pastime/: __init__.py  cli.py  download.py  exceptions.py  field.py  http.py  lookup.py  query.py  type_aliases.py
src/pastime/data/: statcast_fields.json
src/pastime/mlb/: __init__.py  constants.py  discovery.py  games.py  misc.py  people.py  stats.py  stats_api.py
src/pastime/statcast/: __init__.py  analysis.py  base.py  exceptions.py  field.py  leaderboard.py  query.py  search.py
src/pastime/statcast/data/: leaderboard_fields.json  search_fields.json  statcast_fields.json
tests/: test_cli.py  test_constants.py  test_exceptions.py  test_frame.py  test_http.py  test_lookup.py  test_release_scaffolding.py
tests/mlb/: test_mlb.py
tests/statcast/: test_leaderboards.py  test_live.py  test_physics.py  test_search.py
