[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fungo"
version = "1.0.0"
description = "Python tools for baseball data from Statcast and the MLB Stats API."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Josh Hejka" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["baseball", "statcast", "mlb", "sabermetrics", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hedgertronic/fungo"
Repository = "https://github.com/hedgertronic/fungo"

[project.scripts]
fungo = "fungo.cli:main"

[project.optional-dependencies]
polars = ["polars"]
pandas = ["pandas"]
progress = ["rich"]
all = ["polars", "pandas", "rich"]

[dependency-groups]
# Type-checking against the optional backends needs them installed; polars and
# rich ship inline types (PEP 561), pandas needs the separate pandas-stubs.
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "polars",
    "pandas",
    "pandas-stubs",
    "rich",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fungo"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = ["live: hits real network (deselected by default)"]
